--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ list(INSERT CMAKE_MODULE_PATH 0 "${PROJECT_SOURCE_DIR}/cmake")
 ## Find OpenCV
 find_package(OpenCV REQUIRED)
 find_package(HIDAPI REQUIRED)
-message(STATUS "libhidapi: include dir at ${HIDAPI_INCLUDE_DIRS}")
-message(STATUS "libhidapi: libraries at ${HIDAPI_LIBRARIES}")
+# message(STATUS "libhidapi: include dir at ${HIDAPI_INCLUDE_DIRS}")
+# message(STATUS "libhidapi: libraries at ${HIDAPI_LIBRARIES}")
 # include_directories()
 # find_package(zed_open_capture REQUIRED)
 # message(STATUS "ZED Open Capture version: ${zed_open_capture_VERSION}")
@@ -44,14 +44,16 @@ catkin_package(
 )
 
 ## Add executable
-# add_executable(zed_open_capture_node src/stereo_camera_imu_node.cpp)
 add_executable(stereo_node src/stereo_node.cpp)
 add_executable(stereo_imu_node src/stereo_imu_node.cpp)
+
+set_target_properties(stereo_node PROPERTIES PREFIX "")
+set_target_properties(stereo_imu_node PROPERTIES PREFIX "")
 
 target_compile_definitions(stereo_node PUBLIC VIDEO_MOD_AVAILABLE)
 target_compile_definitions(stereo_imu_node PUBLIC VIDEO_MOD_AVAILABLE SENSORS_MOD_AVAILABLE)
 
-## Link libraries
+# Link libraries
 target_link_libraries(stereo_node
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES}
@@ -60,6 +62,5 @@ target_link_libraries(stereo_node
 target_link_libraries(stereo_imu_node
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES}
-  # ${HIDAPI_INCLUDE_DIRS}
   zed_open_capture
 )
